--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Do Cao Hieu</title>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
@@ -11,7 +10,7 @@
 <svg viewBox="0 0 600 300">
     <!-- Symbol-->
     <symbol id="s-text">
-      <text text-anchor="middle" x="50%" y="50%" dy=".35em">Interstellar</text>
+      <text text-anchor="middle" x="50%" y="50%" dy=".35em">DO CAO HIEU</text>
     </symbol>
     <!-- Duplicate symbols-->
     <use class="text" xlink:href="#s-text"></use>
