--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Do Cao Hieu/title>
     <link rel="stylesheet" href="app.css">
 </head>
 <body>
-<h1>Do Cao Hieu</h1>
 <svg viewBox="0 0 600 300">
     <!-- Symbol-->
     <symbol id="s-text">
